# RustOCR

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  Dockerfile  FEATURES.md  PUBLISHING.md  README.md  SERVER_MODE.md  docker-compose.yml  easyocr_bridge.py  easyocr_server.py  easyocr_server_enhanced.py  requirements-server.txt  rustocr  rustocr.sh
.github/workflows/: ci.yml  release.yml
src/: batch.rs  client.rs  config.rs  lib.rs  main.rs  parallel.rs  pdf.rs  server.rs  templates.rs  watch.rs
tests/: integration_tests.rs
