[package]
name = "rustocr"
version = "0.7.0"
edition = "2021"
authors = ["RustOCR Contributors"]
description = "High-performance Rust CLI for EasyOCR with 80+ language support, featuring server mode and batch processing. Fastly Built by FastBuilder.AI"
license = "Apache-2.0"
repository = "https://github.com/cyberiums/RustOCR"
homepage = "https://github.com/cyberiums/RustOCR"
documentation = "https://github.com/cyberiums/RustOCR/blob/main/README.md"
readme = "README.md"
keywords = ["ocr", "easyocr", "cli", "image-processing", "text-recognition"]
categories = ["command-line-utilities", "multimedia::images", "text-processing"]
exclude = [
    "tests/*",
    ".github/*",
    "*.jpg",
    "*.png",
    "images/*"
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
base64 = "0.21"
glob = "0.3"
indicatif = "0.17"
toml = "0.8"
dirs = "5.0"
image = "0.24"
pdf-extract = "0.7"
rayon = "1.8"
num_cpus = "1.16"
notify = "6.1"
crossbeam-channel = "0.5"
html-escape = "0.2"

[[bin]]
name = "rustocr"
path = "src/main.rs"
